Minor doc edits.

--- a/changelog/8913.feature.md
+++ b/changelog/8913.feature.md
@@ -35,11 +35,11 @@ As part of the feature, it also introduces:
   to a prediction error) but the story will be logged in a file called `stories_with_warnings.yml`.
 
 
-`rasa data validate` command should warn if `action_unlikely_intent` is
+`rasa data validate` command will warn if `action_unlikely_intent` is
 included in the training stories. Accordingly, `YAMLStoryWriter` and `MarkdownStoryWriter` have been updated to not dump `action_unlikely_intent` when writing stories to a file.
 
 :::caution
-The introduction of a new default action makes the release **breaking backwards compatibility of machine learning models**.
+The introduction of a new default action **breaks backward compatibility of previously trained models**.
 It is not possible to load models trained with previous versions of Rasa Open Source. Please re-train
 your assistant before trying to use this version.
 
