--- a/docs/docs/migration-guide.mdx
+++ b/docs/docs/migration-guide.mdx
@@ -13,9 +13,9 @@ how you can migrate from one version to another.
 ## Rasa 2.7 to 2.8
 
 :::caution
-This is a release **breaking backwards compatibility of machine learning models**.
+This is a release **breaks backward compatibility of machine learning models**.
 It is not possible to load models trained with previous versions of Rasa Open Source. Please re-train
-your assistant before trying to use this version.
+your assistant before using this version.
 
 :::
 
