--- a/docs/docs/how-to-deploy.mdx
+++ b/docs/docs/how-to-deploy.mdx
@@ -124,7 +124,7 @@ jobs:
 
     - id: action_server
       name: Build an action server with a custom actions
-      uses: RasaHQ/action-server-gha@master
+      uses: RasaHQ/action-server-gha@main
       # Full list of parameters: https://github.com/RasaHQ/action-server-gha/tree/master#input-arguments
       with:
         docker_image_name: 'account_username/repository_name'
