--- a/changelog/8469.improvement.md
+++ b/changelog/8469.improvement.md
@@ -1,1 +1,1 @@
-Added support for a specific network address using the environment variable `SANIC_HOST`
+Added support for a specific network address using the `-i` command line argument
