--- a/changelog/8873.removal.md
+++ b/changelog/8873.removal.md
@@ -1,2 +1,2 @@
-Raising `TypeError` instead of deprecation warning when using 
+Raising `RasaException` instead of deprecation warning when using 
 `class_from_module_path` for loading types other than classes.
