--- a/CHANGELOG.mdx
+++ b/CHANGELOG.mdx
@@ -16,6 +16,39 @@ https://github.com/RasaHQ/rasa/tree/main/changelog/ . -->
 
 <!-- TOWNCRIER -->
 
+## [major.minor.patch] - 2021-07-26 No significant changes.
+
+
+## [major.minor.patch] - 2021-07-26 No significant changes.
+
+
+## [major.minor.patch] - 2021-07-26 No significant changes.
+
+
+## [major.minor.patch] - 2021-07-26 No significant changes.
+
+
+## [major.minor.patch] - 2021-07-26 No significant changes.
+
+
+## [major.minor.patch] - 2021-07-26 No significant changes.
+
+
+## [major.minor.patch] - 2021-07-26 No significant changes.
+
+
+## [major.minor.patch] - 2021-07-26 No significant changes.
+
+
+## [major.minor.patch] - 2021-07-26 No significant changes.
+
+
+## [major.minor.patch] - 2021-07-26 No significant changes.
+
+
+## [major.minor.patch] - 2021-07-26 No significant changes.
+
+
 ## [2.8.1] - 2021-07-22
 ### Improvements
 - [#9085](https://github.com/rasahq/rasa/issues/9085): Add support for `cafile` parameter in `endpoints.yaml`.
