Apply suggestions from code review
Co-authored-by: Daksh Varshneya <d.varshneya@rasa.com>

--- a/changelog/8705.bugfix.md
+++ b/changelog/8705.bugfix.md
@@ -1,1 +1,1 @@
-Fix for `ResponseSelector` training that failed when combining `num_transformer_layers==0` and `use_text_as_label`
+Fix for `ResponseSelector` training that failed when combining `num_transformer_layers=0` and `use_text_as_label=True`
