Rewording change logs to make it clear that the behaviour of the features remains unchanged.

--- a/changelog/8024.doc.md
+++ b/changelog/8024.doc.md
@@ -1,1 +1,2 @@
-The experimental feature warning for the story validation tool has been removed from the rasa docs.
+Removing the experimental feature warning for the `story validation` tool from the rasa docs. 
+The behaviour of the feature remains unchanged. 
