--- a/changelog/8791.doc.md
+++ b/changelog/8791.doc.md
@@ -1,1 +1,3 @@
-The experimental feature warning for entity roles and groups has been removed from the rasa docs, and from the code where it used to appear as a print statement. 
+Removing the experimental feature warning for `entity roles and groups` from the rasa docs, 
+and from the code where it previously appeared as a print statement. 
+The behaviour of the feature remains otherwise unchanged. 
