--- a/docs/versioned_docs/version-2.x/domain.mdx
+++ b/docs/versioned_docs/version-2.x/domain.mdx
@@ -74,7 +74,7 @@ The `entities` section lists all entities that can be
 extracted by any [entity extractor](./components.mdx) in your
 NLU pipeline.
 
-:::version-change-inline Changed in 2.1
+:::caution Changed in 2.1
 If you are using the feature [Entity Roles and Groups](./nlu-training-data.mdx#entities-roles-and-groups) you also
 need to list the roles and groups of an entity in this section.
 
