--- a/docs/versioned_docs/version-2.x/forms.mdx
+++ b/docs/versioned_docs/version-2.x/forms.mdx
@@ -299,7 +299,7 @@ After extracting a slot value from user input, you can validate the extracted sl
 By default Rasa Open Source only validates if any slot was filled after requesting
 a slot.
 
-:::version-change-inline Changed in 2.1
+:::caution Changed in 2.1
 Form no longer raise `ActionExecutionRejection` if nothing is extracted from the user’s
 utterance for any of the required slots.
 :::
