--- a/docs/versioned_docs/version-2.x/nlu-training-data.mdx
+++ b/docs/versioned_docs/version-2.x/nlu-training-data.mdx
@@ -248,7 +248,7 @@ To fill slots from entities with a specific role/group, you need to either defin
 
 ### Entity Roles and Groups influencing dialogue predictions
 
-:::version-change-inline Changed in 2.1
+:::caution Changed in 2.1
 If you want to influence the dialogue predictions by roles or groups, you need to modify your stories to contain
 the desired role or group label. You also need to list the corresponding roles and groups of an entity in your
 [domain file](./domain.mdx#entities).
