--- a/docs/versioned_docs/version-2.x/tracker-stores.mdx
+++ b/docs/versioned_docs/version-2.x/tracker-stores.mdx
@@ -227,7 +227,7 @@ To set up Rasa Open Source with Redis the following steps are required:
 * `use_ssl` (default: `False`): whether or not to use SSL for transit encryption
 
 
-:::version-change-inline New in 2.1
+:::info New in 2.1
 The `key_prefix` parameter was added.
 :::
 
