--- a/docs/versioned_docs/version-2.x/lock-stores.mdx
+++ b/docs/versioned_docs/version-2.x/lock-stores.mdx
@@ -88,6 +88,6 @@ address the same node when sending messages for a given conversation ID.
   * `socket_timeout` (default: `10`): Time in seconds after which an
      error is raised if Redis doesn't answer
 
-:::version-change-inline New in 2.1
+:::info New in 2.1
 The `key_prefix` parameter was added.
 :::
