--- a/docs/versioned_docs/version-2.x/components.mdx
+++ b/docs/versioned_docs/version-2.x/components.mdx
@@ -221,8 +221,7 @@ now implements its behavior.
   ```
 
   :::caution Changed in 2.1
-  Pre-trained weights have been renamed from `bert-base-uncased` to `rasa/LaBSE`.
-  (TODO: not sure if it's the right comment here, or if we even need to document it)
+  Pre-trained weights for BERT have been renamed from `bert-base-uncased` to `rasa/LaBSE`.
   :::
 
 
