fix typos in 2.x docs

--- a/docs/versioned_docs/version-2.x/forms.mdx
+++ b/docs/versioned_docs/version-2.x/forms.mdx
@@ -300,7 +300,7 @@ By default Rasa Open Source only validates if any slot was filled after requesti
 a slot.
 
 :::caution Changed in 2.1
-Form no longer raise `ActionExecutionRejection` if nothing is extracted from the user’s
+Forms no longer raise `ActionExecutionRejection` if nothing is extracted from the user’s
 utterance for any of the required slots.
 :::
 
