--- a/docs/versioned_docs/version-2.x/training-data-format.mdx
+++ b/docs/versioned_docs/version-2.x/training-data-format.mdx
@@ -102,7 +102,7 @@ in a separate file with the prefix `test_`.
 :::note The  `|` symbol
 As shown in the above examples, the `user` and `examples` keys are followed by `|`
 (pipe) symbol. In YAML `|` identifies multi-line strings with preserved indentation.
-This helps to keep special symbols like `"`, `'` and others still available in the
+This helps keep special symbols like `"`, `'` and others still available in the
 training examples.
 :::
 
