improve explanation for LanguageModelFeaturizer config changes

--- a/docs/versioned_docs/version-2.x/components.mdx
+++ b/docs/versioned_docs/version-2.x/components.mdx
@@ -748,7 +748,7 @@ Note: The `feature-dimension` for sequence and sentence features does not have t
 * **Configuration**
 
   :::caution Changed in 2.1
-  TODO: do we need to explain the config changes here?
+  The `model_name`, `model_weights` and `cache_dir` parameters were added to the pipeline configuration file.
   :::
 
   Include a [Tokenizer](./components.mdx#tokenizers) component before this component.
