--- a/docs/versioned_docs/version-2.x/components.mdx
+++ b/docs/versioned_docs/version-2.x/components.mdx
@@ -222,6 +222,7 @@ now implements its behavior.
 
   :::caution Changed in 2.1
   Pre-trained weights for BERT have been renamed from `bert-base-uncased` to `rasa/LaBSE`.
+  Other types of language model have been left unchanged.
   :::
 
 
