--- a/changelog/8057.improvement.md
+++ b/changelog/8057.improvement.md
@@ -1,2 +1,2 @@
 Added authentication support for connecting to external RabbitMQ servers.
-Currently user has to pass a username and password hardcoded url inorder to connect to external rabbitMQ.
+Currently user has to hardcode a username and a password in a URL in order to connect to an external RabbitMQ server.
