--- a/changelog/9386.bugfix.md
+++ b/changelog/9386.bugfix.md
@@ -1,1 +1,1 @@
-``rasa shell`` now outputs custom json unicode characters instead of ``\uxxxx`` codes
+`rasa shell` now outputs custom json unicode characters instead of `\uxxxx` codes
