improve wording for admonition in installation.mdx
Co-authored-by: Chris Desmarais <c.desmarais@rasa.com>

--- a/docs/versioned_docs/version-2.5.x/installation.mdx
+++ b/docs/versioned_docs/version-2.5.x/installation.mdx
@@ -232,8 +232,8 @@ default small `en_core_web_sm` model. Small models require less
 memory to run, but will likely reduce intent classification performance.
 
 :::caution Changed in 2.5
-Support for Spacy 3 was added. In prior versions of Rasa Open Source, to install spaCy with
-its language model for the English language, you need to additionally run
+Support for Spacy 3 was added. To install spaCy with its language model for the English language in prior versions of Rasa Open Source,
+ you need to additionally run
 `python3 -m spacy link en_core_web_md en`.
 :::
 
