--- a/docs/versioned_docs/version-2.x/migration-guide.mdx
+++ b/docs/versioned_docs/version-2.x/migration-guide.mdx
@@ -17,13 +17,13 @@ how you can migrate from one version to another.
 #### SpaCy 3.0
 
 Rasa now supports spaCy 3.0. This means that we can support more features for more
-languages but this also introduced a breaking change. SpaCy 3.0 deprecated the
-`spacy link <language model>` command. So from now on you need to use the
+languages, but this also introduced a breaking change. SpaCy 3.0 deprecated the
+`spacy link <language model>` command. From now on you need to use the
 [the full model name](https://spacy.io/models) in the `config.yml` file.
 
 **Before**
 
-Before you could run `spacy link en en_core_web_md` and then we would be able
+Before, you could run `spacy link en en_core_web_md` and we would be able
 to pick up the correct model from the `language` parameter.
 
 ```yaml
