--- a/docs/docs/components.mdx
+++ b/docs/docs/components.mdx
@@ -1980,7 +1980,7 @@ The `SpacyEntityExtractor` extractor does not provide a `confidence` level and w
         # use regexes to extract entities
         use_regexes: True
         # use match word boundaries for lookup table
-        "use_word_boundaries": True
+        use_word_boundaries: True
   ```
 
 
