--- a/docs/docs/tuning-your-model.mdx
+++ b/docs/docs/tuning-your-model.mdx
@@ -143,7 +143,7 @@ final context dictionary is used to persist the model's metadata.
 
 ### Doing Multi-Intent Classification
 
-You can use multi-intent classification either to predict multiple intents (e.g. `check_balances+transfer_money`), or to model hierarchical intent structure (e.g. `feedback+positive` being more similar to `feedback+negative` than `chitchat`).
+You can use multi-intent classification to predict multiple intents (e.g. `check_balances+transfer_money`), or to model hierarchical intent structure (e.g. `feedback+positive` being more similar to `feedback+negative` than `chitchat`).
 
 To do multi-intent classification, you need to use the [DIETClassifier](./components.mdx#dietclassifier) in your pipeline.
 You'll also need to define these flags in whichever tokenizer you are using:
@@ -199,7 +199,7 @@ If you see enough of these examples, you can create a new intent multi-intent `c
 
 
 :::note
-The model will not predict any combination of intents for which examples are not explicitly given in training data. This is by design as accounting for every possible intent combination would result in combinatorial explosion of the number of intents. You should only add those combinations of intents for which you see enough examples coming in from real users.
+The model will not predict any combination of intents for which examples are not explicitly given in training data. As accounting for every possible intent combination would result in combinatorial explosion of the number of intents, you should only add those combinations of intents for which you see enough examples coming in from real users.
 
 :::
 
@@ -235,7 +235,7 @@ rules:
 
 2) Allow a machine-learning policy to generalize to the multi-intent scenario from single-intent stories.
 
-When using a multi-intent, the intent is featurized for dialogue management using multi-hot encoding. That means the featurization of `check_balances+transfer_money` will overlap the featurization of each individual intent. Policies like TEDPolicy, which can generalize from training stories, can then make a prediction based on the multi-intent even if it does not explicitly appear in any stories. 
+When using a multi-intent, the intent is featurized for machine learning policies using multi-hot encoding. That means the featurization of `check_balances+transfer_money` will overlap with the featurization of each individual intent. Machine learning policies (like TEDPolicy) can then make a prediction based on the multi-intent even if it does not explicitly appear in any stories. It will typically act as if only one of the individual intents was present, however, so it is always a good idea to write a specific story or rule that deals with the multi-intent case.
 
 
 ### Comparing Pipelines
